BIDU Gain: $ 156.31 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5
BIDU Gain: $ -46.83 Win %: 49.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB8
BIDU Gain: $ 107.19 Win %: 54.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB8
BIDU Gain: $ -14.3 Win %: 51.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB8
BIDU Gain: $ -4.62 Win %: 44.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB8
BIDU Gain: $ -128.37 Win %: 41.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB8
BIDU Gain: $ 76.88 Win %: 51.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB8
BIDU Gain: $ -101.2 Win %: 45.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB8
BIDU Gain: $ -90.9 Win %: 42.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB8
BIDU Gain: $ -46.94 Win %: 44.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB8
BIDU Gain: $ -53.76 Win %: 48.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB8
BIDU Gain: $ 151.34 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR2
BIDU Gain: $ 77.48 Win %: 59.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_TS
BIDU Gain: $ -0.48 Win %: 54.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
BIDU Gain: $ 49.21 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR2
BIDU Gain: $ 166.67 Win %: 52.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
BIDU Gain: $ 136.36 Win %: 59.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
BIDU Gain: $ 97.27 Win %: 48.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
BIDU Gain: $ -83.19 Win %: 46.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
BIDU Gain: $ 104.63 Win %: 51.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
BIDU Gain: $ 21.9 Win %: 48.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
BIDU Gain: $ 28.06 Win %: 46.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AL
BIDU Gain: $ -52.05 Win %: 48.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
BIDU Gain: $ 19.1 Win %: 49.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
BIDU Gain: $ 27.11 Win %: 54.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
BIDU Gain: $ 88.83 Win %: 59.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_TS
BIDU Gain: $ -152.23 Win %: 42.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
BIDU Gain: $ -31.61 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP_PM
BIDU Gain: $ 22.16 Win %: 66.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AV_TS
BIDU Gain: $ 3.94 Win %: 57.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AL_TS
BIDU Gain: $ 66.0 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV
BIDU Gain: $ 133.67 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IR2
BIDU Gain: $ 179.85 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR
BIDU Gain: $ 93.63 Win %: 58.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AV
BIDU Gain: $ 87.34 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AL
BIDU Gain: $ 54.85 Win %: 51.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_VI
BIDU Gain: $ 53.41 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_LI
BIDU Gain: $ 25.17 Win %: 54.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP
BIDU Gain: $ 79.89 Win %: 48.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM
BIDU Gain: $ 109.6 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_SS
BIDU Gain: $ 88.89 Win %: 49.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QL
BIDU Gain: $ 80.78 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_DB8
BIDU Gain: $ 167.12 Win %: 57.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO
BIDU Gain: $ 49.31 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AC
BIDU Gain: $ 106.08 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT
BIDU Gain: $ 94.05 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_PM
BIDU Gain: $ 78.54 Win %: 59.00 in 118 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TS
BIDU Gain: $ 23.6 Win %: 56.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_QP_DB8
BIDU Gain: $ 145.06 Win %: 54.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_TR_DB8
BIDU Gain: $ 7.63 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AV_DB8
BIDU Gain: $ 51.55 Win %: 46.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AL_DB8
BIDU Gain: $ -85.56 Win %: 45.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_QP_DB8
BIDU Gain: $ 110.4 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_TR_DB8
BIDU Gain: $ -71.63 Win %: 46.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AV_DB8
BIDU Gain: $ -18.87 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_QP_DB8
BIDU Gain: $ 41.97 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QL_DB8
BIDU Gain: $ -10.37 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QP_DB8
BIDU Gain: $ 131.85 Win %: 57.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_IR2
BIDU Gain: $ 39.62 Win %: 60.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_TS
BIDU Gain: $ 18.07 Win %: 56.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_QP
BIDU Gain: $ -23.98 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP_IR2
BIDU Gain: $ 121.61 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_TR
BIDU Gain: $ 64.77 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AV
BIDU Gain: $ 81.04 Win %: 52.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AL
BIDU Gain: $ -50.86 Win %: 47.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_QP
BIDU Gain: $ 93.09 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_TR
BIDU Gain: $ -29.76 Win %: 45.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AV
BIDU Gain: $ 1.22 Win %: 49.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AL
BIDU Gain: $ -21.43 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_QP
BIDU Gain: $ 65.45 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QL
BIDU Gain: $ 2.99 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QP
BIDU Gain: $ 40.47 Win %: 59.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_TS
BIDU Gain: $ 45.1 Win %: 52.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AO_AC
BIDU Gain: $ -12.77 Win %: 72.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP_PM
BIDU Gain: $ 53.66 Win %: 62.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AV_TS
BIDU Gain: $ 36.83 Win %: 59.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AL_TS
BIDU Gain: $ 67.4 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV
BIDU Gain: $ 98.47 Win %: 57.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IR2
BIDU Gain: $ 129.97 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR
BIDU Gain: $ 44.18 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AV
BIDU Gain: $ 58.86 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AL
BIDU Gain: $ 66.48 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_VI
BIDU Gain: $ 37.02 Win %: 51.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_LI
BIDU Gain: $ 2.99 Win %: 55.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP
BIDU Gain: $ 45.12 Win %: 49.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM
BIDU Gain: $ 97.13 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_SS
BIDU Gain: $ 90.79 Win %: 53.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QL
BIDU Gain: $ 113.83 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_DB8
BIDU Gain: $ 168.68 Win %: 57.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AO
BIDU Gain: $ 22.89 Win %: 50.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AC
BIDU Gain: $ 89.42 Win %: 57.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT
BIDU Gain: $ 48.5 Win %: 58.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_PM
BIDU Gain: $ 29.23 Win %: 61.00 in 118 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TS
BIDU Gain: $ -85.52 Win %: 46.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
BIDU Gain: $ 29.78 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
BIDU Gain: $ 155.58 Win %: 59.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
BIDU Gain: $ 60.2 Win %: 54.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
BIDU Gain: $ -139.64 Win %: 44.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
BIDU Gain: $ -4.53 Win %: 46.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
BIDU Gain: $ 83.81 Win %: 56.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
BIDU Gain: $ -132.82 Win %: 42.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
BIDU Gain: $ 28.29 Win %: 49.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
BIDU Gain: $ -81.27 Win %: 45.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
BIDU Gain: $ 79.29 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR4
BIDU Gain: $ 52.02 Win %: 62.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_TS
BIDU Gain: $ -77.92 Win %: 53.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
BIDU Gain: $ -118.22 Win %: 45.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR4
BIDU Gain: $ 159.66 Win %: 52.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
BIDU Gain: $ 222.63 Win %: 60.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV
BIDU Gain: $ 140.12 Win %: 52.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL
BIDU Gain: $ -97.91 Win %: 46.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP
BIDU Gain: $ 116.88 Win %: 55.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR
BIDU Gain: $ 122.82 Win %: 57.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV
BIDU Gain: $ 55.83 Win %: 54.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AL
BIDU Gain: $ -150.84 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BIDU Gain: $ 61.0 Win %: 49.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL
BIDU Gain: $ -93.88 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP
BIDU Gain: $ -8.9 Win %: 58.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_TS
BIDU Gain: $ -269.27 Win %: 41.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AO_AC
BIDU Gain: $ -23.57 Win %: 55.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP_PM
BIDU Gain: $ 102.26 Win %: 67.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AV_TS
BIDU Gain: $ 83.17 Win %: 68.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AL_TS
BIDU Gain: $ 138.91 Win %: 47.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV
BIDU Gain: $ 63.59 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IR4
BIDU Gain: $ 132.84 Win %: 52.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR
BIDU Gain: $ 220.4 Win %: 60.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AV
BIDU Gain: $ 156.23 Win %: 54.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AL
BIDU Gain: $ 56.65 Win %: 49.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_VI
BIDU Gain: $ 165.06 Win %: 55.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_LI
BIDU Gain: $ -93.88 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP
BIDU Gain: $ 35.29 Win %: 52.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM
BIDU Gain: $ 148.14 Win %: 54.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_SS
BIDU Gain: $ 94.36 Win %: 48.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QL
BIDU Gain: $ 53.2 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_DB15
BIDU Gain: $ -4.95 Win %: 47.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AO
BIDU Gain: $ -13.16 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AC
BIDU Gain: $ 66.69 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT
BIDU Gain: $ 57.36 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_PM
BIDU Gain: $ 34.0 Win %: 61.00 in 118 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TS
BIDU Gain: $ -85.52 Win %: 46.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP_DB15
BIDU Gain: $ 18.5 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR_DB15
BIDU Gain: $ 151.42 Win %: 58.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV_DB15
BIDU Gain: $ 60.2 Win %: 54.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL_DB15
BIDU Gain: $ -139.64 Win %: 44.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP_DB15
BIDU Gain: $ 2.06 Win %: 46.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR_DB15
BIDU Gain: $ 93.54 Win %: 56.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV_DB15
BIDU Gain: $ -121.9 Win %: 44.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP_DB15
BIDU Gain: $ 29.87 Win %: 49.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL_DB15
BIDU Gain: $ -81.27 Win %: 45.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP_DB15
BIDU Gain: $ 79.29 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_IR4
BIDU Gain: $ 52.02 Win %: 62.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_TS
BIDU Gain: $ -77.92 Win %: 53.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP
BIDU Gain: $ -111.58 Win %: 46.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP_IR4
BIDU Gain: $ 127.57 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR
BIDU Gain: $ 222.63 Win %: 60.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV
BIDU Gain: $ 140.33 Win %: 52.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL
BIDU Gain: $ -97.91 Win %: 46.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP
BIDU Gain: $ 116.88 Win %: 55.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR
BIDU Gain: $ 122.82 Win %: 57.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV
BIDU Gain: $ 55.83 Win %: 54.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AL
BIDU Gain: $ -151.44 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP
BIDU Gain: $ 67.34 Win %: 51.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL
BIDU Gain: $ -93.88 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP
BIDU Gain: $ 17.65 Win %: 60.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_TS
BIDU Gain: $ -263.69 Win %: 42.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AO_AC
BIDU Gain: $ 8.82 Win %: 54.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP_PM
BIDU Gain: $ 102.26 Win %: 67.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AV_TS
BIDU Gain: $ 83.17 Win %: 68.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AL_TS
BIDU Gain: $ 138.91 Win %: 47.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV
BIDU Gain: $ 65.11 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IR4
BIDU Gain: $ 132.84 Win %: 52.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR
BIDU Gain: $ 220.4 Win %: 60.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AV
BIDU Gain: $ 156.23 Win %: 54.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AL
BIDU Gain: $ 61.75 Win %: 49.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_VI
BIDU Gain: $ 165.06 Win %: 55.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_LI
BIDU Gain: $ -93.88 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP
BIDU Gain: $ 35.29 Win %: 52.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM
BIDU Gain: $ 131.35 Win %: 52.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_SS
BIDU Gain: $ 94.36 Win %: 48.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QL
BIDU Gain: $ 53.2 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_DB15
BIDU Gain: $ -4.95 Win %: 47.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AO
BIDU Gain: $ -13.16 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AC
BIDU Gain: $ 66.69 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT
BIDU Gain: $ 57.36 Win %: 50.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_PM
BIDU Gain: $ 50.13 Win %: 62.00 in 118 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TS
BIDU Gain: $ -90.25 Win %: 48.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_TR_QP_DB10
BIDU Gain: $ 61.05 Win %: 50.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_RV_TR_DB10
BIDU Gain: $ 96.75 Win %: 50.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_RV_AV_DB10
BIDU Gain: $ 66.84 Win %: 48.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_RV_AL_DB10
BIDU Gain: $ -169.94 Win %: 40.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_RV_QP_DB10
BIDU Gain: $ 46.21 Win %: 50.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_HM_TR_DB10
BIDU Gain: $ 29.99 Win %: 49.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_HM_AV_DB10
BIDU Gain: $ -146.86 Win %: 44.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_HM_QP_DB10
BIDU Gain: $ 28.93 Win %: 46.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_IT_QL_DB10
BIDU Gain: $ -134.66 Win %: 48.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_IT_QP_DB10
BIDU Gain: $ 124.69 Win %: 57.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_TR_IR3
BIDU Gain: $ 39.09 Win %: 62.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_TR_TS
BIDU Gain: $ -78.38 Win %: 50.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_TR_QP
BIDU Gain: $ -72.29 Win %: 50.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_QP_IR3
BIDU Gain: $ 116.06 Win %: 53.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_RV_TR
BIDU Gain: $ 93.97 Win %: 54.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_RV_AV
BIDU Gain: $ 55.42 Win %: 45.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_RV_AL
BIDU Gain: $ -185.38 Win %: 40.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_RV_QP
BIDU Gain: $ 53.06 Win %: 52.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_HM_TR
BIDU Gain: $ 8.26 Win %: 49.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_HM_AV
BIDU Gain: $ 8.16 Win %: 45.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_HM_AL
BIDU Gain: $ -170.31 Win %: 38.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_HM_QP
BIDU Gain: $ 24.7 Win %: 51.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_IT_QL
BIDU Gain: $ -116.17 Win %: 46.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_IT_QP
BIDU Gain: $ -13.82 Win %: 58.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_IT_TS
BIDU Gain: $ 89.31 Win %: 55.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_AO_AC
BIDU Gain: $ -130.03 Win %: 40.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_QP_PM
BIDU Gain: $ -3.31 Win %: 61.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_AV_TS
BIDU Gain: $ 19.77 Win %: 60.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_AL_TS
BIDU Gain: $ 64.86 Win %: 48.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_RV
BIDU Gain: $ 51.42 Win %: 52.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_IR3
BIDU Gain: $ 122.27 Win %: 55.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_TR
BIDU Gain: $ 95.57 Win %: 54.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_AV
BIDU Gain: $ 55.55 Win %: 50.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_AL
BIDU Gain: $ 150.67 Win %: 51.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_VI
BIDU Gain: $ 96.39 Win %: 49.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_LI
BIDU Gain: $ -116.17 Win %: 46.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_QP
BIDU Gain: $ 9.02 Win %: 48.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_HM
BIDU Gain: $ 134.03 Win %: 55.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_SS
BIDU Gain: $ 37.73 Win %: 50.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_QL
BIDU Gain: $ 78.87 Win %: 50.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_DB10
BIDU Gain: $ 89.71 Win %: 58.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_AO
BIDU Gain: $ 89.71 Win %: 58.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_AC
BIDU Gain: $ 46.34 Win %: 57.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_IT
BIDU Gain: $ 49.67 Win %: 54.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_PM
BIDU Gain: $ 22.18 Win %: 65.00 in 118 days with algo TB3_OC_QM_OB2_OS2_CB5_CS5_TS
