BIDU Gain: $ 157.65 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5
BIDU Gain: $ -48.39 Win %: 48.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB8
BIDU Gain: $ 106.24 Win %: 53.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB8
BIDU Gain: $ -11.6 Win %: 51.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB8
BIDU Gain: $ -3.67 Win %: 45.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB8
BIDU Gain: $ -128.37 Win %: 42.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB8
BIDU Gain: $ 70.61 Win %: 50.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB8
BIDU Gain: $ -102.61 Win %: 45.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB8
BIDU Gain: $ -95.45 Win %: 42.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB8
BIDU Gain: $ -47.2 Win %: 43.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB8
BIDU Gain: $ -58.52 Win %: 47.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB8
BIDU Gain: $ 150.65 Win %: 50.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR2
BIDU Gain: $ 76.79 Win %: 58.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_TS
BIDU Gain: $ -1.7 Win %: 53.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
BIDU Gain: $ 47.96 Win %: 54.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR2
BIDU Gain: $ 159.12 Win %: 51.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
BIDU Gain: $ 135.67 Win %: 58.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
BIDU Gain: $ 98.73 Win %: 48.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
BIDU Gain: $ -82.88 Win %: 47.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
BIDU Gain: $ 103.94 Win %: 51.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
BIDU Gain: $ 21.21 Win %: 47.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
BIDU Gain: $ 27.37 Win %: 46.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AL
BIDU Gain: $ -53.3 Win %: 47.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
BIDU Gain: $ 19.49 Win %: 48.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
BIDU Gain: $ 25.86 Win %: 53.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
BIDU Gain: $ 87.95 Win %: 58.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_TS
BIDU Gain: $ -152.55 Win %: 42.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
BIDU Gain: $ -40.62 Win %: 54.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP_PM
BIDU Gain: $ 21.47 Win %: 66.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AV_TS
BIDU Gain: $ 1.06 Win %: 56.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AL_TS
BIDU Gain: $ 65.56 Win %: 49.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV
BIDU Gain: $ 132.98 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IR2
BIDU Gain: $ 179.16 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR
BIDU Gain: $ 75.48 Win %: 55.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AV
BIDU Gain: $ 90.84 Win %: 51.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AL
BIDU Gain: $ 49.7 Win %: 51.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_VI
BIDU Gain: $ 51.42 Win %: 49.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_LI
BIDU Gain: $ 26.29 Win %: 53.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP
BIDU Gain: $ 70.32 Win %: 47.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM
BIDU Gain: $ 108.91 Win %: 54.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_SS
BIDU Gain: $ 87.64 Win %: 48.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QL
BIDU Gain: $ 79.68 Win %: 49.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_DB8
BIDU Gain: $ 162.23 Win %: 57.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO
BIDU Gain: $ 47.93 Win %: 50.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AC
BIDU Gain: $ 105.2 Win %: 54.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT
BIDU Gain: $ 91.53 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_PM
BIDU Gain: $ 77.85 Win %: 58.00 in 119 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TS
BIDU Gain: $ 17.21 Win %: 54.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_QP_DB8
BIDU Gain: $ 143.62 Win %: 53.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_TR_DB8
BIDU Gain: $ 6.43 Win %: 49.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AV_DB8
BIDU Gain: $ 52.08 Win %: 47.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AL_DB8
BIDU Gain: $ -84.07 Win %: 46.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_QP_DB8
BIDU Gain: $ 109.2 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_TR_DB8
BIDU Gain: $ -72.83 Win %: 46.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AV_DB8
BIDU Gain: $ -16.88 Win %: 53.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_QP_DB8
BIDU Gain: $ 57.26 Win %: 50.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QL_DB8
BIDU Gain: $ -12.04 Win %: 54.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QP_DB8
BIDU Gain: $ 125.57 Win %: 56.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_IR2
BIDU Gain: $ 40.35 Win %: 59.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_TS
BIDU Gain: $ 23.67 Win %: 57.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_QP
BIDU Gain: $ -5.93 Win %: 56.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP_IR2
BIDU Gain: $ 120.59 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_TR
BIDU Gain: $ 64.48 Win %: 55.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AV
BIDU Gain: $ 81.99 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AL
BIDU Gain: $ -48.94 Win %: 47.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_QP
BIDU Gain: $ 92.31 Win %: 50.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_TR
BIDU Gain: $ -30.54 Win %: 45.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AV
BIDU Gain: $ -0.5 Win %: 48.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AL
BIDU Gain: $ -18.95 Win %: 55.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_QP
BIDU Gain: $ 59.12 Win %: 53.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QL
BIDU Gain: $ -1.41 Win %: 54.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QP
BIDU Gain: $ 40.51 Win %: 58.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_TS
BIDU Gain: $ 44.54 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AO_AC
BIDU Gain: $ -19.63 Win %: 71.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP_PM
BIDU Gain: $ 52.88 Win %: 62.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AV_TS
BIDU Gain: $ 31.6 Win %: 57.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AL_TS
BIDU Gain: $ 66.38 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV
BIDU Gain: $ 96.78 Win %: 57.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IR2
BIDU Gain: $ 129.13 Win %: 54.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR
BIDU Gain: $ 43.4 Win %: 55.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AV
BIDU Gain: $ 58.08 Win %: 54.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AL
BIDU Gain: $ 66.48 Win %: 50.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_VI
BIDU Gain: $ 36.24 Win %: 51.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_LI
BIDU Gain: $ 5.47 Win %: 56.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP
BIDU Gain: $ 44.34 Win %: 48.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM
BIDU Gain: $ 96.35 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_SS
BIDU Gain: $ 90.01 Win %: 52.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QL
BIDU Gain: $ 112.63 Win %: 50.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_DB8
BIDU Gain: $ 168.12 Win %: 57.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AO
BIDU Gain: $ 22.01 Win %: 49.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AC
BIDU Gain: $ 88.46 Win %: 57.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT
BIDU Gain: $ 46.83 Win %: 57.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_PM
BIDU Gain: $ 28.45 Win %: 60.00 in 119 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TS
BIDU Gain: $ -88.53 Win %: 46.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
BIDU Gain: $ 26.63 Win %: 49.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
BIDU Gain: $ 146.38 Win %: 57.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
BIDU Gain: $ 58.93 Win %: 53.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
BIDU Gain: $ -142.09 Win %: 44.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
BIDU Gain: $ 0.5 Win %: 46.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
BIDU Gain: $ 92.76 Win %: 56.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
BIDU Gain: $ -135.83 Win %: 42.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
BIDU Gain: $ 27.66 Win %: 48.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
BIDU Gain: $ -84.28 Win %: 45.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
BIDU Gain: $ 78.17 Win %: 50.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR4
BIDU Gain: $ 53.88 Win %: 63.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_TS
BIDU Gain: $ -80.38 Win %: 52.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
BIDU Gain: $ -121.07 Win %: 45.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR4
BIDU Gain: $ 147.94 Win %: 52.00 in 119 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
