Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4
Gain: $ 8.56 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_IR5
Gain: $ 5.88 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_TR
Gain: $ 10.5 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_AV
Gain: $ 2.52 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_VI
Gain: $ 10.91 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_AL
Gain: $ 4.61 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_LI
Gain: $ 3.11 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_QP
Gain: $ 8.62 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_HM
Gain: $ 10.57 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_SS
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_QL
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_DB30
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_TR_IR5
Gain: $ 2.19 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_TR_QP
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_QP_IR5
Gain: $ 5.91 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV_TR
Gain: $ 1.75 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV_AV
Gain: $ 4.18 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV_AL
Gain: $ 0.76 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV_QP
Gain: $ 5.37 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_HM_TR
Gain: $ 0.58 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_HM_AV
Gain: $ 1.48 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_HM_QP
Gain: $ 8.56 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_IR5
Gain: $ 5.88 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_TR
Gain: $ 10.5 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_AV
Gain: $ 2.52 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_VI
Gain: $ 10.91 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_AL
Gain: $ 4.61 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_LI
Gain: $ 3.11 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_QP
Gain: $ 8.62 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_HM
Gain: $ 10.57 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_SS
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_QL
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_DB30
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_TR_IR5
Gain: $ 2.19 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_TR_QP
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_QP_IR5
Gain: $ 5.91 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV_TR
Gain: $ 1.75 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV_AV
Gain: $ 4.18 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV_AL
Gain: $ 0.76 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV_QP
Gain: $ 5.37 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_HM_TR
Gain: $ 0.58 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_HM_AV
Gain: $ 1.48 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_HM_QP
Gain: $ 8.56 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_IR5
Gain: $ 5.88 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_TR
Gain: $ 10.5 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_AV
Gain: $ 2.52 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_VI
Gain: $ 10.91 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_AL
Gain: $ 4.61 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_LI
Gain: $ 3.11 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_QP
Gain: $ 8.62 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_HM
Gain: $ 10.57 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_SS
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_QL
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_DB30
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_TR_IR5
Gain: $ 2.19 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_TR_QP
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_QP_IR5
Gain: $ 5.91 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV_TR
Gain: $ 1.75 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV_AV
Gain: $ 4.18 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV_AL
Gain: $ 0.76 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV_QP
Gain: $ 5.37 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_HM_TR
Gain: $ 0.58 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_HM_AV
Gain: $ 1.48 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_HM_QP
Gain: $ 8.56 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_IR5
Gain: $ 5.88 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_TR
Gain: $ 10.5 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_AV
Gain: $ 2.52 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_VI
Gain: $ 10.91 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_AL
Gain: $ 4.61 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_LI
Gain: $ 3.11 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_QP
Gain: $ 8.62 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_HM
Gain: $ 10.57 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_SS
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_QL
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_DB30
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_TR_IR5
Gain: $ 2.19 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_TR_QP
Gain: $ 0 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_QP_IR5
Gain: $ 5.91 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV_TR
Gain: $ 1.75 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV_AV
Gain: $ 4.18 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV_AL
Gain: $ 0.76 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV_QP
Gain: $ 5.37 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_HM_TR
Gain: $ 0.58 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_HM_AV
Gain: $ 1.48 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_HM_QP
Gain: $ 1.48 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_HM_QP
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4
Gain: $ 8.56 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV
Gain: $ 2.84 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_IR5
Gain: $ 5.88 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_TR
Gain: $ 10.5 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_AV
Gain: $ 2.52 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_VI
Gain: $ 10.91 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_AL
Gain: $ 4.61 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_LI
Gain: $ 3.11 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_QP
Gain: $ 8.62 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_HM
Gain: $ 10.57 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_SS
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_QL
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_DB30
Gain: $ 0.38 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_TR_IR5
Gain: $ 2.19 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_TR_QP
Gain: $ 1.7 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_QP_IR5
Gain: $ 5.91 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV_TR
Gain: $ 1.75 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV_AV
Gain: $ 4.18 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV_AL
Gain: $ 0.76 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_RV_QP
Gain: $ 5.37 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_HM_TR
Gain: $ 0.58 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_HM_AV
Gain: $ 1.48 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB4_CS4_HM_QP
Gain: $ 8.56 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV
Gain: $ 2.84 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_IR5
Gain: $ 5.88 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_TR
Gain: $ 10.5 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_AV
Gain: $ 2.52 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_VI
Gain: $ 10.91 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_AL
Gain: $ 4.61 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_LI
Gain: $ 3.11 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_QP
Gain: $ 8.62 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_HM
Gain: $ 10.57 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_SS
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_QL
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_DB30
Gain: $ 0.38 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_TR_IR5
Gain: $ 2.19 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_TR_QP
Gain: $ 1.7 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_QP_IR5
Gain: $ 5.91 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV_TR
Gain: $ 1.75 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV_AV
Gain: $ 4.18 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV_AL
Gain: $ 0.76 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_RV_QP
Gain: $ 5.37 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_HM_TR
Gain: $ 0.58 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_HM_AV
Gain: $ 1.48 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB3_CS3_HM_QP
Gain: $ 8.56 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV
Gain: $ 2.84 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_IR5
Gain: $ 5.88 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_TR
Gain: $ 10.5 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_AV
Gain: $ 2.52 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_VI
Gain: $ 10.91 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_AL
Gain: $ 4.61 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_LI
Gain: $ 3.11 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_QP
Gain: $ 8.62 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_HM
Gain: $ 10.57 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_SS
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_QL
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_DB30
Gain: $ 0.38 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_TR_IR5
Gain: $ 2.19 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_TR_QP
Gain: $ 1.7 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_QP_IR5
Gain: $ 5.91 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV_TR
Gain: $ 1.75 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV_AV
Gain: $ 4.18 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV_AL
Gain: $ 0.76 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_RV_QP
Gain: $ 5.37 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_HM_TR
Gain: $ 0.58 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_HM_AV
Gain: $ 1.48 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB2_CS2_HM_QP
Gain: $ 8.56 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV
Gain: $ 2.84 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_IR5
Gain: $ 5.88 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_TR
Gain: $ 10.5 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_AV
Gain: $ 2.52 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_VI
Gain: $ 10.91 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_AL
Gain: $ 4.61 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_LI
Gain: $ 3.11 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_QP
Gain: $ 8.62 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_HM
Gain: $ 10.57 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_SS
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_QL
Gain: $ 10.77 Win %: 100.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_DB30
Gain: $ 0.38 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_TR_IR5
Gain: $ 2.19 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_TR_QP
Gain: $ 1.7 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_QP_IR5
Gain: $ 5.91 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV_TR
Gain: $ 1.75 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV_AV
Gain: $ 4.18 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV_AL
Gain: $ 0.76 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_RV_QP
Gain: $ 5.37 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_HM_TR
Gain: $ 0.58 Win %: 33.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_HM_AV
Gain: $ 1.48 Win %: 66.00 in 3 days with algo TB1_OC_QM_OB4_OS4_CB1_CS1_HM_QP
